syntax = "proto3";

package images;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/images/protos";

////////////////////////////////////////////////////////////////////////////////

message DeleteImageRequest {
    string ImageId = 1;
    string OperationCloudId = 2;
    string OperationFolderId = 3;
}

message DeleteImageTaskState {
    DeleteImageRequest Request = 1;
}
